--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,12 +19,11 @@
 <!-- package="tv.flipr.superstar" -->
 <!-- package="tv.flipr.musicvideo" -->
 <!-- package="tv.flipr.newsflipr" -->
-<!-- package="tv.flipr.ktsf26" -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="tv.flipr.ktsf26"
-      android:versionCode="95"
-      android:versionName="5.0.0.95">
+      package="tv.tv9x9.player"
+      android:versionCode="96"
+      android:versionName="5.0.0.96">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
@@ -62,7 +61,6 @@
             </intent-filter>
 		
 			<!-- for 9x9 -->
-			<!--		
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
@@ -78,7 +76,6 @@
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr" />        	       					   					
 			</intent-filter>
-			-->
 			 		
 			<!-- for Joey Graceffa -->
 			<!--		
@@ -178,18 +175,18 @@
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-crashcourse" />        	       					   					
 			</intent-filter>
-			-->	
+			 -->	
 								
 			<!-- for CTS -->
-			<!-- 
+			<!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-cts" />        	       					   					
 			</intent-filter>	
-			-->	
-				
+			-->
+	
 			<!-- for GOODTV -->
 			<!-- 
 			<intent-filter>
@@ -209,15 +206,7 @@
     			<data android:scheme="flipr-ddtv" />        	       					   					
 			</intent-filter>
 			 -->	
-			 
-			<!-- for KTSF -->
-			<intent-filter>
-				<action android:name="android.intent.action.VIEW" />
-    			<category android:name="android.intent.category.DEFAULT" />
-   				<category android:name="android.intent.category.BROWSABLE" />  	
-    			<data android:scheme="flipr-ktsf26" />        	       					   					
-			</intent-filter>	
-					
+
 			<!-- for FCU -->
 			<!--
 			<intent-filter>
@@ -361,6 +350,14 @@
                   android:label="@string/app_name">
         </activity>
                   
+        <activity
+            android:name="io.vov.vitamio.activity.InitActivity"
+            android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateAlwaysHidden">            
+        </activity>
+        
         <service android:name="tv.tv9x9.player.switchboard" />
         
     </application>
