--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
 <!-- package="tv.flipr.superstar" -->
 <!-- package="tv.flipr.musicvideo" -->
 <!-- package="tv.flipr.newsflipr" -->
+<!-- package="tv.flipr.ktsf26" -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
@@ -61,6 +62,7 @@
             </intent-filter>
 		
 			<!-- for 9x9 -->
+			<!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
@@ -76,6 +78,7 @@
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr" />        	       					   					
 			</intent-filter>
+			-->
 			 		
 			<!-- for Joey Graceffa -->
 			<!--		
@@ -178,14 +181,12 @@
 			 -->	
 								
 			<!-- for CTS -->
-			<!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-cts" />        	       					   					
 			</intent-filter>	
-			-->
 	
 			<!-- for GOODTV -->
 			<!-- 
@@ -256,7 +257,16 @@
     			<data android:scheme="flipr-newsflipr" />        	       					   					
 			</intent-filter>
 		 	-->				 
-																				
+
+            <!-- for KTSF -->
+		    <!-- 
+                <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" /> 
+                <data android:scheme="flipr-ktsf26" />                                
+			-->
+                																				
         </activity>
 
 <!-- entire Manifest file as provided from RC company:
