--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,11 +18,14 @@
 <!-- package="tv.flipr.thenewslens" -->
 <!-- package="tv.flipr.superstar" -->
 <!-- package="tv.flipr.musicvideo" -->
-<!-- package="tv.flipr.newsflipr" -->
+<!-- package="tv.flipr.news" -->
 <!-- package="tv.flipr.ktsf26" -->
 <!-- package="tv.flipr.pinoytv" -->
 <!-- package="tv.flipr.demo" -->
 <!-- package="tv.flipr.magazine" -->
+<!-- package="tv.flipr.test" -->
+<!-- package="tv.flipr.gametube" -->
+<!-- package="tv.flipr.daaitv" -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
@@ -65,6 +68,7 @@
             </intent-filter>
 		
 			<!-- for 9x9 -->
+			<!--		
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
@@ -80,6 +84,7 @@
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr" />        	       					   					
 			</intent-filter>
+			-->
 			 		
 			<!-- for Joey Graceffa -->
 			<!--		
@@ -102,14 +107,14 @@
 			-->
 
 			<!-- for The Fine Bros -->
-			<!--		
+			<!-- 
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-thefinebros" />        	       					   					
-			</intent-filter>	
-			-->		
+			</intent-filter>
+			 -->	
 					
 			<!-- for History -->
 			<!-- 
@@ -182,24 +187,24 @@
 			 -->	
 								
 			<!-- for CTS -->
-			<!-- 
+			<!--   
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-cts" />        	       					   					
 			</intent-filter>	
-			 -->	
+			--> 	
 	
 			<!-- for GOODTV -->
-			<!-- 
+			 <!-- 
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-goodtv" />        	       					   					
 			</intent-filter>
-			-->	
+			 -->	
 
 			<!-- for DDTV -->
 			<!-- 
@@ -212,7 +217,7 @@
 			 -->	
 
 			<!-- for FCU -->
-			<!--
+			<!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
@@ -222,17 +227,17 @@
 			-->
 			
 			<!-- for THENEWSLENS -->
-			<!-- 
+			<!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-thenewslens" />        	       					   					
 			</intent-filter>	
-		 	-->
+		 	 -->
 		 	 
 		 	<!-- for SUPERSTAR -->
-			<!--
+			<!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
@@ -249,17 +254,17 @@
    				<category android:name="android.intent.category.BROWSABLE" />  	
     			<data android:scheme="flipr-musicvideo" />        	       					   					
 			</intent-filter>	
-			-->
+			 --> 
 			
 			<!-- for NEWSFLIPR -->
-		    <!-- 
+		    <!--  
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
     			<category android:name="android.intent.category.DEFAULT" />
    				<category android:name="android.intent.category.BROWSABLE" />  	
-    			<data android:scheme="flipr-newsflipr" />        	       					   					
+    			<data android:scheme="flipr-news" />        	       					   					
 			</intent-filter>
-		 	-->				 
+		 	 -->				 
 
             <!-- for KTSF -->
 		    <!-- 
@@ -282,17 +287,17 @@
 			-->
 			
             <!-- for Demo -->
-            <!--
+  			<!--  
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="flipr-demo" />
             </intent-filter>
-            -->
+			-->
 
             <!-- for Magazine -->
-            <!--
+            <!-- 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -300,6 +305,36 @@
                 <data android:scheme="flipr-magazine" />
             </intent-filter>
             -->
+            
+            
+            <!-- for test -->
+            <!--
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+    			<category android:name="android.intent.category.DEFAULT" />
+   				<category android:name="android.intent.category.BROWSABLE" />  	
+    			<data android:scheme="flipr-test" />        	       					   					
+			</intent-filter>	
+            -->
+            
+            <!-- for Gametube -->
+            <!-- 
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="flipr-gametube" />
+            </intent-filter>
+             -->
+             
+            <!-- for daaitv -->
+            
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="flipr-daaitv" />
+            </intent-filter>
             																				
         </activity>
 
