--- a/project.properties
+++ b/project.properties
@@ -13,10 +13,9 @@
 # Indicates whether an apk should be generated for each density.
 split.density=false
 # Project target.
-target=android-19
-android.library.reference.1=../../adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v7/appcompat
-android.library.reference.3=../../facebook-android-sdk-3.5.2/facebook
-android.library.reference.2=../../adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v7/mediarouter
-android.library.reference.4=../../adt-bundle-linux-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.5=../../gcast/GoogleCastSdkAndroid
-android.library.reference.6=../../VitamioBundle/vitamio
+target=android-18
+android.library.reference.1=../ffbb/facebook-android-sdk/facebook
+android.library.reference.3=../android-sdk-linux/extras/android/support/v7/mediarouter
+android.library.reference.2=../android-sdk-linux/extras/android/support/v7/appcompat
+android.library.reference.4=../android-sdk-linux/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.5=../git/VitamioBundle/vitamio
