--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,8 +35,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
-      android:versionCode="112"
-      android:versionName="5.0.1.112">
+      android:versionCode="113"
+      android:versionName="5.0.1.113">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
@@ -52,6 +52,7 @@
    			
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />    
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -512,6 +513,27 @@
   			</intent-filter>
 		</receiver>
 		
+		<service android:name="tv.tv9x9.player.AppCastDeviceService" android:exported="false">
+    		<intent-filter>
+        		<action android:name="android.media.MediaRouteProviderService" />
+    		</intent-filter>
+    		<intent-filter>
+        		<action android:name="com.fireflycast.cast.service.INTENT" />
+       			<category android:name="android.intent.category.DEFAULT" />
+    		</intent-filter>
+    		<intent-filter>
+        		<action android:name="com.fireflycast.cast.service.DEVICE_SCANNER_INTENT" />
+        		<category android:name="android.intent.category.DEFAULT" />
+    		</intent-filter> 
+		</service>
+
+		<service android:name="tv.tv9x9.player.AppCastService" android:exported="false">
+    		<intent-filter>
+        		<action android:name="com.fireflycast.cast.service.BIND_CAST_DEVICE_CONTROLLER_SERVICE" />
+        		<category android:name="android.intent.category.DEFAULT" />
+    		</intent-filter> 
+		</service>
+
     </application>
 
-</manifest> 
+</manifest>
