--- a/project.properties
+++ b/project.properties
@@ -19,3 +19,4 @@ android.library.reference.3=../android-sdk-linux/extras/android/support/v7/media
 android.library.reference.2=../android-sdk-linux/extras/android/support/v7/appcompat
 android.library.reference.4=../android-sdk-linux/extras/google/google_play_services/libproject/google-play-services_lib
 android.library.reference.5=../git/VitamioBundle/vitamio
+android.library.reference.6=../firefly_sdk
